exports[`App snapshots 1`] = `
<div
  className="page">
  <h1>
    Hacker News
  </h1>
  <div
    className="interactions">
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        type="text"
        value="react" />
      <button
        type="submit">
        Search
      </button>
    </form>
  </div>
  <div
    className="table">
    <div
      className="table-header">
      <span
        style={
          Object {
            "width": "40%",
          }
        }>
        Title
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }>
        Author
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }>
        Comments
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }>
        Points
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        } />
    </div>
  </div>
  <div
    className="interactions">
    <button
      className=""
      onClick={[Function]}
      type="button">
      More
    </button>
  </div>
</div>
`;

exports[`Search snapshots 1`] = `
<form
  onSubmit={undefined}>
  <input
    onChange={undefined}
    type="text"
    value={undefined} />
  <button
    type="submit">
    Search
  </button>
</form>
`;

exports[`Table snapshots 1`] = `
<div
  className="table">
  <div
    className="table-header">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      Title
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      Author
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      Comments
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      Points
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      } />
  </div>
  <div
    className="table-row">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <a
        href={undefined}>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <a
        href={undefined}>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
